--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.1.7",
+    "@tanstack/react-query": "^5.59.13",
     "classnames": "^2.5.1",
     "color": "^4.2.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-transition-group": "^4.4.5"
+    "react-router-dom": "^6.27.0",
+    "react-transition-group": "^4.4.5",
+    "viem": "^2.21.25",
+    "wagmi": "^2.12.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
