--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.25",
+    "@headlessui/react": "^2.1.10",
     "@rainbow-me/rainbowkit": "^2.1.7",
     "@tanstack/react-query": "^5.59.13",
     "classnames": "^2.5.1",
@@ -19,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-transition-group": "^4.4.5",
+    "rizzui": "^0.8.7",
     "viem": "^2.21.25",
     "wagmi": "^2.12.17"
   },
