--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.10",
     "@rainbow-me/rainbowkit": "^2.1.7",
     "@tanstack/react-query": "^5.59.13",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "color": "^4.2.3",
     "prop-types": "^15.8.1",
