--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "classnames": "^2.5.1",
     "color": "^4.2.3",
     "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "react-transition-group": "^4.4.5",
     "rizzui": "^0.8.7",
     "viem": "^2.21.25",
