--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@floating-ui/react": "^0.26.25",
     "@headlessui/react": "^2.1.10",
     "@rainbow-me/rainbowkit": "^2.1.7",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.13",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
@@ -22,9 +23,11 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
     "react-transition-group": "^4.4.5",
+    "redux-persist": "^6.0.0",
     "rizzui": "^0.8.7",
     "viem": "^2.21.25",
     "wagmi": "^2.12.17"
