--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
